--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -263,30 +263,7 @@ body {
             display: inline-block;
             margin-bottom: 5px;
         }
-        .task-item .delete-btn {
-            position: absolute;
-            top: 50%;
-            right: 10px;
-            transform: translateY(-50%);
-            background-color: var(--danger-color);
-            color: white;
-            border: none;
-            padding: 10px;
-            border-radius: 5px;
-            font-size: 16px;
-            display: none;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        .task-item.swiped-left {
-            transform: translateX(-100px);
-        }
-        .task-item.swiped-left .delete-btn {
-            display: block;
-        }
-        .task-item .delete-btn:hover {
-            background-color: #B71C1C;
-        }
+        
         @media (max-width: 600px) {
             .add-task-btn {
                 width: 50px;
@@ -509,7 +486,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-            <span>Home3</span>
+            <span>Home4</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -1326,56 +1303,36 @@ async function finishTask(userName, task, button, selectedDate) {
 
         function enableSwipeToDelete(taskElement) {
   const content = taskElement.querySelector('.task-item-content');
-  const deleteBtn = taskElement.querySelector('.delete-btn');
 
   let startX = 0;
   let currentX = 0;
-  let isSwiping = false;
-  let moved = false;
-  let swipeHappened = false;
-  const SWIPE_THRESHOLD = 30;
-  const TAP_MOVEMENT_LIMIT = 8;
-  const SWIPE_TIME_LIMIT = 300;
-  let startTime = 0;
+  let isDragging = false;
 
   const onStart = (x) => {
     startX = x;
     currentX = x;
-    isSwiping = true;
-    moved = false;
-    swipeHappened = false;
+    isDragging = true;
     content.style.transition = 'none';
   };
 
   const onMove = (x) => {
-    if (!isSwiping) return;
+    if (!isDragging) return;
     const deltaX = x - startX;
-    currentX = x;
-    if (Math.abs(deltaX) > TAP_MOVEMENT_LIMIT) {
-      moved = true;
-    }
-    if (deltaX < 0 && Math.abs(deltaX) <= 100) { // Swipe left max 100px
+    if (deltaX < 0 && Math.abs(deltaX) <= 100) { // allow swiping left only up to -100px
       content.style.transform = `translateX(${deltaX}px)`;
     }
   };
 
   const onEnd = () => {
-    if (!isSwiping) return;
-    isSwiping = false;
+    if (!isDragging) return;
+    isDragging = false;
     content.style.transition = 'transform 0.3s ease';
     const deltaX = currentX - startX;
-    const swipeDuration = Date.now() - startTime;
-
-    if (deltaX < -SWIPE_THRESHOLD && swipeDuration < SWIPE_TIME_LIMIT) {
+    if (deltaX < -50) {
       content.style.transform = `translateX(-100px)`;
-      swipeHappened = true;
     } else {
       content.style.transform = `translateX(0)`;
     }
-
-    setTimeout(() => {
-      swipeHappened = false;
-    }, 300);
   };
 
   // Touch events
@@ -1384,11 +1341,8 @@ async function finishTask(userName, task, button, selectedDate) {
   });
   taskElement.addEventListener('touchmove', (e) => {
     onMove(e.touches[0].clientX);
-    if (moved) e.preventDefault();
   });
-  taskElement.addEventListener('touchend', (e) => {
-    onEnd();
-  });
+  taskElement.addEventListener('touchend', onEnd);
 
   // Mouse events
   taskElement.addEventListener('mousedown', (e) => {
@@ -1397,29 +1351,8 @@ async function finishTask(userName, task, button, selectedDate) {
   taskElement.addEventListener('mousemove', (e) => {
     if (e.buttons === 1) onMove(e.clientX);
   });
-  taskElement.addEventListener('mouseup', (e) => {
-    onEnd();
-  });
-
-  // Prevent accidental popup
-  taskElement.addEventListener('click', (e) => {
-    if (swipeHappened) {
-      e.preventDefault();
-      e.stopImmediatePropagation();
-    }
-  });
-
-  // Delete button click
-  deleteBtn.addEventListener('click', (e) => {
-    e.stopPropagation();
-    if (confirm("Are you sure you want to delete this task?")) {
-      deleteTaskFromBackend(taskElement.dataset.taskTitle, taskElement.dataset.taskDate.split(" to ")[0]);
-      const selectedDate = document.querySelector(".day.selected")?.dataset.date;
-      if (selectedDate) loadTasksForDate(selectedDate);
-    }
-  });
+  taskElement.addEventListener('mouseup', onEnd);
 }
-
 
 
 
