--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -509,7 +509,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-            <span>Home1</span>
+            <span>Home2</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -1311,7 +1311,6 @@ async function finishTask(userName, task, button, selectedDate) {
 
 
 
-
         function enableSwipeToDelete(taskElement) {
   let startX = 0;
   let currentX = 0;
@@ -1319,10 +1318,10 @@ async function finishTask(userName, task, button, selectedDate) {
   let startTime = 0;
   let isTap = true;
 
-  const threshold = 50; // Pixels needed to confirm a swipe
-  const minSwipeDuration = 200; // Minimum duration in milliseconds
-  const tapThreshold = 10; // Max movement for a tap (pixels)
-  const maxTapDuration = 500; // Max duration for a tap (milliseconds)
+  const threshold = 30; // 🐝 Easier swipe (was 50)
+  const minSwipeDuration = 0; // 🐝 Instant swipe allowed (was 200ms)
+  const tapThreshold = 10;
+  const maxTapDuration = 300; // Slightly faster taps
 
   const onStart = (x, e) => {
     startX = x;
@@ -1338,10 +1337,9 @@ async function finishTask(userName, task, button, selectedDate) {
     const deltaX = currentX - startX;
     const absDeltaX = Math.abs(deltaX);
 
-    // If movement exceeds tap threshold, it’s a swipe, not a tap
     if (absDeltaX > tapThreshold) {
       isTap = false;
-      e.preventDefault(); // Prevent scrolling only for swipes
+      e.preventDefault();
     }
 
     if (deltaX < 0) {
@@ -1354,10 +1352,11 @@ async function finishTask(userName, task, button, selectedDate) {
     isSwiping = false;
     const deltaX = currentX - startX;
     const swipeDuration = Date.now() - startTime;
-    taskElement.style.transition = 'transform 0.3s ease';
+    
+    // 🐝 Faster animation if canceled
+    taskElement.style.transition = deltaX < -threshold ? 'transform 0.3s ease' : 'transform 0.15s ease';
 
-    // Handle swipe to delete
-    if (deltaX < -threshold && swipeDuration >= minSwipeDuration && !isTap) {
+    if (deltaX < -threshold && (swipeDuration >= minSwipeDuration || !isTap)) {
       taskElement.classList.add('swiped-left');
       taskElement.style.transform = 'translateX(-100px)';
     } else {
@@ -1365,18 +1364,13 @@ async function finishTask(userName, task, button, selectedDate) {
       taskElement.style.transform = 'translateX(0)';
     }
 
-    // Allow tap to proceed if it’s a tap
     if (isTap && swipeDuration < maxTapDuration) {
-      // Don’t prevent default; let the click event fire naturally
-    }
-
-    // ✅ Fix: if tap was on delete button, manually trigger its click
-    if (isTap && e.target && e.target.classList.contains('delete-btn')) {
-      e.target.click();
+      if (e.target && e.target.classList.contains('delete-btn')) {
+        e.target.click();
+      }
     }
   };
 
-  // Touch events
   taskElement.addEventListener('touchstart', (e) => {
     onStart(e.touches[0].clientX, e);
   });
@@ -1387,9 +1381,8 @@ async function finishTask(userName, task, button, selectedDate) {
     onEnd(e);
   });
 
-  // Mouse events (desktop)
   taskElement.addEventListener('mousedown', (e) => {
-    e.preventDefault(); // Prevent text selection
+    e.preventDefault();
     onStart(e.clientX, e);
   });
   taskElement.addEventListener('mousemove', (e) => {
@@ -1399,7 +1392,6 @@ async function finishTask(userName, task, button, selectedDate) {
     onEnd(e);
   });
 
-  // Reset swipe if mouse leaves
   taskElement.addEventListener('mouseleave', () => {
     if (isSwiping) onEnd();
   });
