--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -114,22 +114,26 @@ body {
 
 .task-item .delete-btn {
     position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-    background-color: var(--danger-color);
+    top: 0;
+    right: -100%;
+    height: 100%;
+    width: 100px;
+    background: var(--danger-color);
     color: white;
     border: none;
-    padding: 10px 15px;
-    border-radius: 5px;
+    border-radius: 0 12px 12px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
     font-size: 16px;
-    display: none;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: right 0.3s ease;
 }
 
 .task-item.swiped-left .delete-btn {
     display: block;
+    right: 0;
 }
 
 .task-item .delete-btn:hover {
@@ -509,7 +513,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-            <span>Home2</span>
+            <span>Home3</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -762,7 +766,7 @@ const visibleTasks = tasks.filter(task => {
                 taskHTML += `<strong>${task.title}</strong><br><em style="color:#aaa;">No rotation</em><br>`;
             }
 
-            taskDiv.innerHTML = taskHTML + `<button class="delete-btn">Delete</button>`;
+            taskDiv.innerHTML = taskHTML + `<div class="delete-btn">Delete</div>`;
 
             taskDiv.addEventListener("click", async (e) => {
                 if (!e.target.classList.contains("delete-btn")) {
@@ -773,11 +777,12 @@ const visibleTasks = tasks.filter(task => {
                 }
             });
 
-            taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
-                if (confirm("Are you sure you want to delete this task?")) {
-                    await deleteTaskFromBackend(task.title, task.date);
-                    loadTasksForDate(selectedDate);
-                }
+            taskDiv.querySelector(".delete-btn").addEventListener("click", async (e) => {
+  e.stopPropagation();
+  if (confirm("Are you sure you want to delete this task?")) {
+    await deleteTaskFromBackend(task.title, task.date);
+    loadTasksForDate(selectedDate);
+  }
             });
 
             taskList.appendChild(taskDiv);
