--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -513,7 +513,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-            <span>Home3</span>
+            <span>Home4</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -777,12 +777,11 @@ const visibleTasks = tasks.filter(task => {
                 }
             });
 
-            taskDiv.querySelector(".delete-btn").addEventListener("click", async (e) => {
-  e.stopPropagation();
-  if (confirm("Are you sure you want to delete this task?")) {
-    await deleteTaskFromBackend(task.title, task.date);
-    loadTasksForDate(selectedDate);
-  }
+            taskDiv.querySelector(".delete-btn").addEventListener("click", async () => {
+                if (confirm("Are you sure you want to delete this task?")) {
+                    await deleteTaskFromBackend(task.title, task.date);
+                    loadTasksForDate(selectedDate);
+                }
             });
 
             taskList.appendChild(taskDiv);
