--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -123,21 +123,21 @@ body {
     color: white;
     border: none;
     border-radius: 0 12px 12px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: flex; /* 🐝 New */
+    align-items: center; /* 🐝 Vertical center */
+    justify-content: center; /* 🐝 Horizontal center */
     font-weight: bold;
     font-size: 16px;
     cursor: pointer;
     transition: right 0.3s ease;
-    padding: 0;
-    text-align: center; /* 🐝 Important for extra safety */
 }
+
 
 
 
 .task-item.swiped-left .delete-btn {
     display: block;
+    right: 0;
 }
 
 .task-item .delete-btn:hover {
@@ -517,7 +517,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-            <span>Home6</span>
+            <span>Home8</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
