swipe left delete button fix in tasks #18

--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -123,14 +123,15 @@ body {
     color: white;
     border: none;
     border-radius: 0 12px 12px 0;
-    display: flex; /* 🐝 New */
-    align-items: center; /* 🐝 Vertical center */
-    justify-content: center; /* 🐝 Horizontal center */
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: bold;
     font-size: 16px;
     cursor: pointer;
     transition: right 0.3s ease;
 }
+
 
 
 
@@ -271,21 +272,7 @@ body {
             display: inline-block;
             margin-bottom: 5px;
         }
-        .task-item .delete-btn {
-            position: absolute;
-            top: 50%;
-            right: 10px;
-            transform: translateY(-50%);
-            background-color: var(--danger-color);
-            color: white;
-            border: none;
-            padding: 10px;
-            border-radius: 5px;
-            font-size: 16px;
-            display: none;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
+
         .task-item.swiped-left {
             transform: translateX(-100px);
         }
@@ -517,7 +504,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/1-Home/home.html" class="footer-icon" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
-            <span>Home8</span>
+            <span>Home9</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
